<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.qomplx.mdtsdb</groupId>
  <artifactId>mdtsdb-client</artifactId>
  <version>3.1.8</version>
  <packaging>jar</packaging>

  <name>mdtsdb-client</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>19.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.6.2</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>1.7.25</version>
    </dependency>
    <dependency>
      <groupId>org.asynchttpclient</groupId>
      <artifactId>async-http-client</artifactId>
      <version>2.1.0-alpha21</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>bson</artifactId>
      <version>3.11.0</version>
    </dependency>
  </dependencies>
  <build>
      <pluginManagement>
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <configuration>
                      <source>1.8</source>
                      <target>1.8</target>
                      <compilerArgs>
                        <arg>-Xlint:all,-options,-path</arg>
                      </compilerArgs>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-javadoc-plugin</artifactId>
                  <version>2.9.1</version>
		 <executions>
        		<execution>
            			<id>attach-javadocs</id>
            		<goals>
                		<goal>jar</goal>
            		</goals>
            		<configuration> <!-- add this to disable checking -->
                		<additionalparam>-Xdoclint:none</additionalparam>
            		</configuration>
        		</execution>
    		</executions>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-resources-plugin</artifactId>
                  <version>2.5</version>
                  <configuration>
                      <encoding>${project.build.sourceEncoding}</encoding>
                      <nonFilteredFileExtensions>
                          <nonFilteredFileExtension>kmz</nonFilteredFileExtension>
                      </nonFilteredFileExtensions>
                  </configuration>
              </plugin>
          </plugins>
      </pluginManagement>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>2.8.2</version>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-release-plugin</artifactId>
              <version>2.5.3</version>
          </plugin>
      </plugins>
      <resources>
          <resource>
              <directory>src/main/resources</directory>
              <filtering>true</filtering>
              <includes>
                  <include>**/*.kml</include>
              </includes>
          </resource>
          <resource>
              <directory>src/main/resources</directory>
              <filtering>false</filtering>
              <excludes>
                  <exclude>**/*.kml</exclude>
              </excludes>
          </resource>
          <resource>
              <directory>src/main/java/examples/com/qomplx/mdtsdb/client</directory>
              <includes>
                  <include>MdtsdbCredentials.Master.properties</include>
                  <include>MdtsdbCredentials.Compression.properties</include>
                  <include>MdtsdbCredentials.Compression.gzip.properties</include>
                  <include>MdtsdbCredentials.Compression.bson.properties</include>
                  <include>MdtsdbCredentials.Compression.gzip-bson.properties</include>
              </includes>
          </resource>
      </resources>
  </build>
</project>
